# Course_work_4

./: .gitignore  README.md  config.py  main.py  pyproject.toml
data/: list_of_vacancies_from_api.json  solo_vacancy.json  test.json
src/: handler.py  headhunter_api.py  json_file_handler.py  jsonsaver.py  parcer.py  saver.py  utlis.py  vacancy.py
tests/: conftest.py  test_json_file_handler.py
