[tool.poetry]
name = "course_work_4"
version = "0.1.0"
description = ""
authors = ["Dmitry Moskalev <moskalev199618120@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.1.1"
response = "^0.5.0"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
